building out components

--- a/vue-capitalize/package.json
+++ b/vue-capitalize/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "normalize.css": "^8.0.1",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "wink-pos-tagger": "^2.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
