--- a/vue-capitalize/package.json
+++ b/vue-capitalize/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "debounce": "^1.2.0",
+    "en-pos": "^1.0.16",
     "normalize.css": "^8.0.1",
     "throttle-debounce": "^2.1.0",
     "vue": "^2.6.10",
