--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "normalize.css": "^8.0.1",
     "throttle-debounce": "^2.1.0",
     "vue": "^2.6.10",
+    "vue-analytics": "^5.17.2",
     "vue-meta": "^2.3.1",
     "vue-toasted": "^1.1.27",
     "wink-pos-tagger": "^2.2.2"
