--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "smartquotes": "^2.3.1",
     "vue": "^2.6.10",
     "vue-analytics": "^5.17.2",
     "vue-toasted": "^1.1.27"
