--- a/package.json
+++ b/package.json
@@ -8,25 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
+    "core-js": "^2.6.11",
+    "lodash": "^4.17.15",
     "register-service-worker": "^1.6.2",
-    "smartquotes": "^2.3.1",
-    "vue": "^2.6.10",
-    "vue-analytics": "^5.17.2",
+    "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
     "vue-toasted": "^1.1.27"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-plugin-pwa": "^4.0.5",
-    "@vue/cli-service": "^3.11.0",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-pwa": "^4.1.2",
+    "@vue/cli-service": "^4.1.2",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "style-resources-loader": "^1.2.1",
+    "style-resources-loader": "^1.3.3",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
