--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^2.6.11",
+    "global": "^4.4.0",
     "lodash": "^4.17.15",
     "register-service-worker": "^1.6.2",
+    "rollup": "^2.45.2",
     "vue": "^2.6.11",
     "vue-analytics": "^5.22.1",
     "vue-toasted": "^1.1.27"
